// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`карточка pledge возвращает нормальные тексты status === "" 1`] = `
Object {
  "key": "Поиск данных о залоге",
}
`;

exports[`карточка pledge возвращает нормальные тексты status === ERROR 1`] = `
Object {
  "key": "Есть данные о залоге",
}
`;

exports[`карточка pledge возвращает нормальные тексты status === OK 1`] = `
Object {
  "key": "Данные о залоге не найдены",
}
`;

exports[`карточка pledge возвращает нормальные тексты status === UNKNOWN 1`] = `
Object {
  "key": "Данные о залоге появятся чуть позже",
}
`;

exports[`полный отчет pledge возвращает нормальные тексты status === "" 1`] = `undefined`;

exports[`полный отчет pledge возвращает нормальные тексты status === ERROR 1`] = `
Object {
  "key": "Данные о залоге",
  "value": "Есть записи",
}
`;

exports[`полный отчет pledge возвращает нормальные тексты status === OK 1`] = `
Object {
  "key": "Данные о залоге",
  "value": "Нет записей",
}
`;

exports[`полный отчет pledge возвращает нормальные тексты status === UNKNOWN 1`] = `
Object {
  "key": "Данные о залоге",
  "value": "Информация появится чуть позже",
}
`;
